--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Christopher Reed
+theme: minima
 author: Christopher Reed
 email: reed.christopher17@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
